test/cpls/errors/fn-needs-body.cpls
{
  "type": "CALL",
  "operator": {
    "type": "WORD",
    "name": "fn",
    "offset": 0,
    "line": 1,
    "column": 1
  },
  "args": []
}